--- a/Phonebook.Web/ClientApp/src/app/Phonebook/Phonebook.component.html
+++ b/Phonebook.Web/ClientApp/src/app/Phonebook/Phonebook.component.html
@@ -1,15 +1,33 @@
 
 <div *ngIf="DoneLoadingData">
-  <h2>Ronald's Phonebook</h2>
 
-  <div class="row" style="background-color:lightgrey; width:450px">
-    <div class="col-sm-12">
-      <mat-form-field>
+
+  <div class="row">
+    <div class="col-md-4" style="background-color: lightcyan">
+      <h3>Add Phonebook</h3>
+      <button id="tilesLeft" (click)="openPhonebookDialog()" mat-raised-button color="accent">+</button>
+    </div>
+
+    <div class="col-md-8" style="background-color:lightgoldenrodyellow">
+      <!--<h3>Select Phonebook</h3>-->
+      <form [formGroup]="phonebookService.phonebookFormModel">
+        <mat-form-field>
+          <mat-label>Phonebooks</mat-label>
+          <mat-select formControlName="Name" (selectionChange)="setPhonebook($event)" required>
+            <mat-option>-select phonebook-</mat-option>
+            <mat-option *ngFor="let phonebook of Phonebooks" [value]="phonebook.id">
+              {{phonebook.name}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </form>
+
+      <mat-form-field [disabled]="Phonebooks.length === 6">
         <input matInput type="text" (keyup)="searchEntries($event.target.value)" placeholder="Search">
       </mat-form-field>
-      <button id="tiles" (click)="openDialog()" mat-raised-button color="primary">+</button>
+      <button id="tilesRight" (click)="openContactDialog()" mat-raised-button color="primary">+</button>
 
-      <div class="example-container mat-elevation-z8">
+      <div class="example-container mat-elevation-z8" [disabled]="Phonebooks.length === 6">
         <mat-table id="myDataTable" [dataSource]="entries">
           <ng-container matColumnDef="contactName">
             <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
