--- a/Phonebook.Web/ClientApp/src/app/Phonebook/Phonebook.component.html
+++ b/Phonebook.Web/ClientApp/src/app/Phonebook/Phonebook.component.html
@@ -13,7 +13,7 @@
 
 
     <div class="col-md-8" style="background-color:lightgoldenrodyellow">
-      {{Phonebooks | json}}
+      <!--{{Phonebooks | json}}-->
       <mat-form-field>
         <mat-label>Phonebooks</mat-label>
         <mat-select (selectionChange)="setPhonebook($event.value)" required>
