empty phonebook fix

--- a/Phonebook.Web/ClientApp/src/app/Phonebook/Phonebook.component.css
+++ b/Phonebook.Web/ClientApp/src/app/Phonebook/Phonebook.component.css
@@ -36,6 +36,10 @@
   transform: scale(1.1);
 }
 
+  #tilesLeft:disabled{
+    background-color: lightgrey;
+  }
+
 .example-container {
   height: 400px;
   overflow: auto;
