--- a/Phonebook.Web/ClientApp/src/app/Phonebook/Phonebook.component.html
+++ b/Phonebook.Web/ClientApp/src/app/Phonebook/Phonebook.component.html
@@ -25,7 +25,7 @@
       </mat-form-field>
       <br />
 
-      <mat-form-field [disabled]="Phonebooks.length === 6">
+      <mat-form-field [disabled]="Phonebooks.length == 6">
         <input matInput type="text" (keyup)="searchEntries($event.target.value)" placeholder="Search">
       </mat-form-field>
       <button id="tilesRight" (click)="openContactDialog()" mat-raised-button color="primary">+</button>
